--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root{
+  --red: #d01c28;
+  --blue: #007bff;
+  --light-blue: #00BFFF;
+  --dark-blue: #00008B;
+  --light-red: #FF6347;
+  --dark-red: #8B0000;
+  --light-green: #32CD32;
+  --dark-green: #006400;
+  --light-yellow: #FFFFE0;
+  --dark-yellow: #FFD700;
+  --light-purple: #E6E6FA;
+  --dark-purple: #4B0082;
+  --light-orange: #FFA07A;
+  --dark-orange: #FF4500;
+  --light-pink: #FFB6C1;
+  --blue: #0000FF;
+  --green: #00FF00;
+  --yellow: #FFFF00;
+  --purple: #800080;
+  --orange: #FFA500;
+  --pink: #FFC0CB;
+  --brown: #A52A2A;
+  --gray: #808080;
+  --black: #000000;
+  --white: #FFFFFF;
+}
 .poppins-thin {
   font-family: "Poppins", sans-serif;
   font-weight: 100;
@@ -155,7 +182,7 @@ nav .nav-menu li:hover {
 }
 /* nav login button*/
 nav .login button {
-  background-color: #007bff;
+  background-color: var(--red);
   color: white;
   padding: 10px 20px;
   border: none;
